Adjusted the homepage with new logo and graphics

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -143,7 +143,7 @@
           class="col-sm-4 col-lg-2 text-center text-sm-start d-flex gap-3 justify-content-center justify-content-md-start">
           <div class="d-flex align-items-center my-3 my-sm-0">
             <a href="index.html">
-              <img src="images/logo1.svg" alt="logo" class="img-fluid" width="70" height="70">
+              <img src="images/logo1.svg" alt="logo" class="img-fluid" width="90" height="90">
             </a>
           </div>
         </div>
@@ -192,11 +192,11 @@
   </header>
   <!-- Top image banner with text about languages-->
   <section
-    style="background-image: url('images/wmremove-transformed.jpeg');background-repeat: no-repeat;background-size: cover;">
+    style="background-image: url('images/Coding_\(Unsplash\).jpg');background-repeat: no-repeat;background-size: cover;">
     <div class="container-lg">
       <div class="row">
         <div class="col-lg-6 pt-5 mt-5">
-          <h2 class="display-1 ls-1"><span style="color: #6db593;" class="fw-bold">Programming</span> Made easy to <span
+          <h2 class="display-1 ls-1"><span style="color: #57ae86;" class="fw-bold">Programming</span> Made easy to <span
               class="fw-bold">Master</span></h2>
           <p style="color: #000;" class="fs-4">The platform to assist your journey.</p>
           <div class="d-flex gap-3">
@@ -206,30 +206,30 @@
             <div class="col">
               <div class="row text-dark">
                 <div class="col-auto">
-                  <p class="fs-1 fw-bold lh-sm mb-0">3</p>
+                  <p style="color: #ffffff;" class="fs-1 fw-bold lh-sm mb-0">5</p>
                 </div>
                 <div class="col">
-                  <p class="text-uppercase lh-sm mb-0">Languages and growing</p>
+                  <p style="color: #ffffff;" class="text-uppercase lh-sm mb-0">Languages and growing</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="row text-dark">
                 <div class="col-auto">
-                  <p class="fs-1 fw-bold lh-sm mb-0">5</p>
+                  <p style="color: #ffffff;" class="fs-1 fw-bold lh-sm mb-0">5</p>
                 </div>
                 <div class="col">
-                  <p class="text-uppercase lh-sm mb-0">deidcated tutors</p>
+                  <p style="color: #ffffff;" class="text-uppercase lh-sm mb-0">deidcated tutors</p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="row text-dark">
                 <div class="col-auto">
-                  <p class="fs-1 fw-bold lh-sm mb-0">20k+</p>
+                  <p style="color: #ffffff;" class="fs-1 fw-bold lh-sm mb-0">20k+</p>
                 </div>
                 <div class="col">
-                  <p class="text-uppercase lh-sm mb-0">amazing users</p>
+                  <p style="color: #ffffff;" class="text-uppercase lh-sm mb-0">amazing users</p>
                 </div>
               </div>
             </div>
@@ -268,7 +268,7 @@
         <div class="col-md-12">
 
           <div class="section-header d-flex flex-wrap justify-content-between mb-5">
-            <h2 class="section-title">Languages</h2>
+            <h2 class="section-title">Our Most Popular Languages</h2>
 
           </div>
 
@@ -278,30 +278,30 @@
         <div class="col-md-12">
           <div class="category-carousel swiper">
             <div class="swiper-wrapper">
-              <a onclick="setLanguageName('Arabic'); window.location.href = 'language.html';" href="#"
+              <a onclick="setLanguageName('JAVA'); window.location.href = 'language.html';" href="#"
                 class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-1.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Arabic</h4>
+                <h4 class="fs-6 mt-3 fw-normal category-title">Java</h4>
               </a>
-              <a onclick="setLanguageName('Chinese'); window.location.href = 'language.html';" href="#"
+              <a onclick="setLanguageName('JavaScript'); window.location.href = 'language.html';" href="#"
                 class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-2.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Chinese</h4>
+                <h4 class="fs-6 mt-3 fw-normal category-title">JavaScript</h4>
               </a>
-              <a onclick="setLanguageName('English'); window.location.href = 'language.html';" href="#"
+              <a onclick="setLanguageName('C++'); window.location.href = 'language.html';" href="#"
                 class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-3.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">English</h4>
+                <h4 class="fs-6 mt-3 fw-normal category-title">C++</h4>
               </a>
-              <a onclick="setLanguageName('Spanish'); window.location.href = 'language.html';" href="#"
+              <a onclick="setLanguageName('Python'); window.location.href = 'language.html';" href="#"
                 class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-4.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Spanish</h4>
+                <h4 class="fs-6 mt-3 fw-normal category-title">Python</h4>
               </a>
-              <a onclick="setLanguageName('Japanese'); window.location.href = 'language.html';" href="#"
+              <a onclick="setLanguageName('Dart'); window.location.href = 'language.html';" href="#"
                 class="nav-link swiper-slide text-center">
                 <img src="images/category-thumb-5.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Japanese</h4>
+                <h4 class="fs-6 mt-3 fw-normal category-title">Dart</h4>
               </a>
             </div>
           </div>
@@ -318,7 +318,7 @@
         <div class="col-md-12">
 
           <div class="section-header d-flex flex-wrap justify-content-between mb-5">
-            <h2 class="section-title">Our tutors</h2>
+            <h2 class="section-title">Popular Tutors</h2>
 
           </div>
 
@@ -499,7 +499,7 @@
 
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer-menu">
-            <img src="images/logo1.svg" width="70" height="70" alt="logo">
+            <img src="images/logo1.svg" width="150" height="150" alt="logo">
           </div>
         </div>
 
