Adjusted homepage and removed unecessary images

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -328,25 +328,20 @@
         <div class="col-md-12">
           <div class="category-carousel swiper">
             <div class="swiper-wrapper">
-              <a onclick="setTutorName('Brian Wiles'); window.location.href = 'tutor.html';" href="#"
+              <a onclick="setTutorName('Navin'); window.location.href = 'tutor.html';" href="#"
                 class="nav-link swiper-slide text-center">
-                <img src="images/brian_wiles.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Brian Wiles</h4>
+                <img src="images/Navin.jpg" class="rounded-circle" alt="Category Thumbnail">
+                <h4 class="fs-6 mt-3 fw-normal category-title">Navin</h4>
               </a>
-              <a onclick="setTutorName('Lili Hao'); window.location.href = 'tutor.html';" href="#"
+              <a onclick="setTutorName('Nana'); window.location.href = 'tutor.html';" href="#"
                 class="nav-link swiper-slide text-center">
-                <img src="images/Lili_hao.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Lili Hao</h4>
+                <img src="images/Nana.jpg" class="rounded-circle" alt="Category Thumbnail">
+                <h4 class="fs-6 mt-3 fw-normal category-title">Nana</h4>
               </a>
-              <a onclick="setTutorName('Emma'); window.location.href = 'tutor.html';" href="#"
+              <a onclick="setTutorName('Mosh'); window.location.href = 'tutor.html';" href="#"
                 class="nav-link swiper-slide text-center">
-                <img src="images/emma.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Emma</h4>
-              </a>
-              <a onclick="setTutorName('Japanese Pod'); window.location.href = 'tutor.html';" href="#"
-                class="nav-link swiper-slide text-center">
-                <img src="images/Japenesepod.jpg" class="rounded-circle" alt="Category Thumbnail">
-                <h4 class="fs-6 mt-3 fw-normal category-title">Japanese Pod</h4>
+                <img src="images/Mosh.jpg" class="rounded-circle" alt="Category Thumbnail">
+                <h4 class="fs-6 mt-3 fw-normal category-title">Mosh</h4>
               </a>
             </div>
           </div>
@@ -403,8 +398,8 @@
         <div class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-md-4">
-              <h2 class="mt-5">Download Language Learning Platform App</h2>
-              <p>Online Orders made easy, fast and reliable</p>
+              <h2 class="mt-5">Download the LLP App</h2>
+              <p>Learn on the go</p>
               <div class="d-flex gap-2 flex-wrap mb-5">
                 <a href="#" title="App store"><img src="images/img-app-store.png" alt="app-store"></a>
                 <a href="#" title="Google Play"><img src="images/img-google-play.png" alt="google-play"></a>
