Adjusted the AI assistant and added tiken checker in language and tutor pages

--- a/src/main/resources/static/language.html
+++ b/src/main/resources/static/language.html
@@ -276,6 +276,7 @@
     <script>
   window.onload = async function logOut() {
     if (localStorage.getItem('token') === null) {
+      window.location = "login.html";
     }
     else {
       await addLogout();
