--- a/src/main/resources/static/assistant.html
+++ b/src/main/resources/static/assistant.html
@@ -4,7 +4,6 @@
 
 <head>
 
-  <title>Translation Page</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -131,15 +130,15 @@
         <div class="container">
           <div class="row justify-content-center">
             <h2 class="section-title display-5 text-black">What do you need help with?</h2>
-            <p style="color: black;">Ask any question or ask for any code!!</p>
-            <div class="section-header">
-              <div class="col-md-4 p-3">
+            <p style="color: black;">Ask any question!!!</p>
+            <div class="col-md-4 p-3">
+              <div class="col-md-6 p-10">
                 <p style="color: black;">Your prompt here: </p>
                 <textarea id="testinput" type="text" placeholder="Write Anything"></textarea>
                 <button type="button" class="btn btn-secondary btn-group-sm" onclick="getresponse()">Submit</button>
               </div>
             </div>
-            <div class="col-md-4 p-3">
+            <div class="col-md-6 p-10">
               <p style="color: black;">Output: </p>
               <textarea id="airesponse" placeholder="....."></textarea>
             </div>
